# app-actigraphy-test

./: Dockerfile  README.md  SECURITY.md  pyproject.toml
assets/: styles.css
src/actigraphy/: __main__.py  app.py
src/actigraphy/components/: __init__.py  app_license.py  day_slider.py  file_selection.py  finished_checkbox.py  graph.py  switches.py  utils.py
src/actigraphy/core/: __init__.py  callback_manager.py  cli.py  config.py  exceptions.py  utils.py
src/actigraphy/database/: __init__.py  crud.py  database.py  models.py  utils.py
src/actigraphy/io/: __init__.py  ggir_files.py  preprocess.py
src/actigraphy/plotting/: __init__.py  sensor_plots.py
tests/: conftest.py
tests/unit/: test___main__.py  test_app.py  test_cli.py  test_config.py  test_core_utils.py  test_database.py  test_io.py  test_minor_files.py  test_models.py  test_sensor_plots.py
tests/unit/components/: __init__.py  callback_test_manager.py  test_finished_checkbox.py  test_switches.py
